# stp-database

./: pyproject.toml
stp_database/models/Achievements/: __init__.py  achievements.py  activations.py  awards.py  inventory.py  log_achievements.py
stp_database/models/Backend/: __init__.py  tokens.py
stp_database/models/GameCenter/: __init__.py  assigned_chances.py  games_list.py
stp_database/models/Note/: __init__.py  note.py  space.py  space_participant.py
stp_database/models/Recruitments/: candidates.py
stp_database/models/STP/: __init__.py  achievement.py  employee.py  product.py  transactions.py
stp_database/models/Shedule/: __init__.py  shift.py  shift_high.py  shift_out.py
stp_database/models/Stats/: spec_kpi.py  spec_premium.py
stp_database/repo/Achievements/: __init__.py  achievements.py  activations.py  awards.py  inventory.py  log_achievements.py  requests.py
stp_database/repo/Backend/: __init__.py  requests.py  tokens.py
stp_database/repo/GameCenter/: __init__.py  games.py  requests.py
stp_database/repo/Note/: __init__.py  note.py  requests.py  space.py
stp_database/repo/STP/: achievement.py  achievements_new.py  employee.py  note.py  product.py  purchase.py  requests.py  space.py  transactions.py
stp_database/repo/Shedule/: __init__.py  requests.py  shifts.py  shifts_high.py  shifts_out.py
stp_database/repo/Stats/: head_premium.py  spec_kpi.py  spec_premium.py
