[project]
name = "stp-database"
version = "2.0"
description = "Модели и репозитории для взаимодействия с БД СТП"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Roman Chursanov", email = "roman@chrsnv.ru" }
]
dependencies = [
    "sqlalchemy>=2.0.43",
    "aiomysql>=0.3.2",
    "pytz>=2025.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stp_database"]

[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["D", "E", "F", "I"]
ignore = ["D417", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
